--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -148,33 +148,34 @@ jobs:
     if: github.ref == 'main'
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@master
-        with:
-          node-version: '13.x'
+      - name: Checkout and Node setup 
+      uses: actions/checkout@v2
+      uses: actions/setup-node@master
+      with:
+        node-version: '13.x'
 
       - name: Build and deploy app
-        run: npm ci && npm run build --prod
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PEZEVENTS }}'
-          channelId: live
-          projectId: pezevents
-          target: pezevents
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+      run: npm ci && npm run build --prod
+      uses: FirebaseExtended/action-hosting-deploy@v0
+      with:
+        repoToken: '${{ secrets.GITHUB_TOKEN }}'
+        firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PEZEVENTS }}'
+        channelId: live
+        projectId: pezevents
+        target: pezevents
+      env:
+        FIREBASE_CLI_PREVIEWS: hostingchannels
 
       - name: Build and deploy functions
-        if: needs.check_functions.outputs.deploy_functions == 'true'
-        working-directory: ./functions
-        run: npm ci && npm run build
+      if: needs.check_functions.outputs.deploy_functions == 'true'
+      working-directory: ./functions
+      run: npm ci && npm run build
 
       - name: Deploy functions
-        if: needs.check_functions.outputs.deploy_functions == 'true'
-        working-directory: ./
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy -P stage-pezevents --only functions
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
+      if: needs.check_functions.outputs.deploy_functions == 'true'
+      working-directory: ./
+      uses: w9jds/firebase-action@master
+      with:
+        args: deploy -P stage-pezevents --only functions
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
