--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -6,6 +6,8 @@ name: Deploy to Dev
   push:
     branches:
       - develop
+      - staging
+      - main
 
 jobs:
   # Print github context
@@ -49,10 +51,42 @@ jobs:
             fi
           done < files.txt
 
+  check_env:
+    name: Check files
+    outputs:
+      app_id: ${{ steps.check_env.outputs.app_id }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+
+      - name: Set dev app id
+        if: github.ref == 'develop'
+        id: app_id_check
+        run: |
+          echo "This is a PR into the develop branch. Using dev-pezevents."
+          echo "::set-output name=app_id::dev-pezevents"
+
+      - name: Set stage app id
+        if: github.ref == 'staging'
+        id: app_id_check
+        run: |
+          echo "This is a PR into the develop branch. Using stage-pezevents."
+          echo "::set-output name=app_id::stage-pezevents"
+
+      - name: Set prod app id
+        if: github.ref == 'main'
+        id: app_id_check
+        run: |
+          echo "This is a PR into the develop branch. Using pezevents."
+          echo "::set-output name=app_id::pezevents"
+
   job_for_functions:
     name: Job for 'functions' folder
     needs: check_functions
-    if: needs.check.outputs.deploy_functions == 'true'
+    if: needs.check_functions.outputs.deploy_functions == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: run for 'functions' folder
@@ -60,37 +94,39 @@ jobs:
 
   # Deploy app to development
   # dev.sezzion.com
-  dev_deploy:
+  deploy:
     runs-on: ubuntu-latest
-    needs: check_functions
-
-    if: github.ref == 'develop'
-
+    needs: [check_functions, check_env]
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
         with:
           node-version: "13.x"
 
-      - name: Build app
+      - name: Build app dev
+        if: needs.check_env.outputs.app_id == 'dev-pezevents'
         run: |
           npm ci
           npm run build
+
+      - name: Build app dev
+        if: needs.check_env.outputs.app_id == 'stage-pezevents'
+        run: |
+          npm ci
+          npm run build:staging
+
+      - name: Build app dev
+        if: needs.check_env.outputs.app_id == 'pezevents'
+        run: |
+          npm ci
+          npm run build:prod
 
       - name: Build functions
         if: needs.check_functions.outputs.deploy_functions == 'true'
+        working-directory: ./functions
         run: |
-          cd ./functions
           npm ci
           npm run build
-          cd ..
-
-      - name: Deploy hosting
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy -P dev-pezevents --only hosting:dev-pezevents
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
 
       - name: Deploy functions
         if: needs.check_functions.outputs.deploy_functions == 'true'
@@ -100,67 +136,16 @@ jobs:
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
 
-  # Deploy app to staging
-  # stage.sezzion.com
-  staging_deploy:
-    runs-on: ubuntu-latest
-    needs: check_functions
-
-    if: github.ref == 'staging'
-
-    steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@master
-        with:
-          node-version: "13.x"
-
-      - name: Build app
-        run: |
-          npm ci
-          npm run build
-
-      - name: Build functions
-        if: needs.check_functions.outputs.deploy_functions == 'true'
-        working-directory: ./functions
-        run: |
-          npm ci
-          npm run build
-
-      - name: Deploy hosting
+      - name: Deploy dev or stage
+        if: needs.check_env.outputs.app_id == 'dev-pezevents' || needs.check_env.outputs.app_id == 'stage-pezevents'
         uses: w9jds/firebase-action@master
         with:
-          args: deploy -P stage-pezevents --only hosting:stage-pezevents
+          args: deploy -P ${{needs.check_env.outputs.app_id}} --only hosting:${{needs.check_env.outputs.app_id}}
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
 
-      - name: Deploy functions
-        if: needs.check_functions.outputs.deploy_functions == 'true'
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy -P stage-pezevents --only functions
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
-
-  # Deploy app to production.
-  # sezzion.com
-  prod_deploy:
-    runs-on: ubuntu-latest
-    needs: check_functions
-
-    if: github.ref == 'main'
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@master
-        with:
-          node-version: "13.x"
-
-      - name: Build and deploy app
-        run: |
-          npm ci
-          npm run build --prod
-
-      - name: Deploy prod app
+      - name: Deploy prod
+        if: needs.check_env.outputs.app_id == 'pezevents'
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
@@ -170,18 +155,3 @@ jobs:
           target: pezevents
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
-
-      - name: Build and deploy functions
-        if: needs.check_functions.outputs.deploy_functions == 'true'
-        working-directory: ./functions
-        run: |
-          npm ci
-          npm run build
-
-      - name: Deploy functions
-        if: needs.check_functions.outputs.deploy_functions == 'true'
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy -P stage-pezevents --only functions
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
